src/test/deca/syntax/valid/print_argument_multiple.deca
// Description:
//    Un print avec trois arguments.
//    [Semantique], Procedures d'affichage, p100:
//    print(E1, E2, ... En); est équivalent à print(E1); print(E2); ... print(En);.
//
// Resultats:
// abcd
// Il n'y a pas de retour à la ligne.
//
// Historique:
//    cree le 05/01/2022

{
        print("a", "b", "c", "d");
}
